<resources>

    <string name="app_name">GluCare</string>
    <string name="title_activity_draw">Main</string>
    <string name="start_activity">Start</string>
    <string name="information_developer">Created By HyunJae, ChangWook, ChanWoo</string>
    <string name="information_company">SAMSUNG</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">SAMSUNG</string>
    <string name="user_email">user@samsung.com</string>

    <string name="bluetooth_settings">Bluetooth</string>
    <string name="graph_nav">Graph</string>
    <string name="information_setting">Information</string>
    <string name="share_setting">Share</string>
    <string name="call_setting">Call</string>
    <string name="NFC_settings">NFC</string>
    <string name="setting">Settings</string>
    <string name="user_setting">User</string>

    <!-- PREFENCE-->

    <string name="pref_graph_title">Graph Setting</string>
    <string name="pref_algorithm_title">Algorithm Setting</string>
    <string name="pref_notification_title">Notification Setting</string>

    <!--Preference Limit Hours-->

    <string name="pref_limit_hours_key" translatable="false">Limit Days</string>
    <string name="pref_limit_hours_label" translatable="true">그래프에 보여지는 총 시간</string>
    <string name="pref_limit_hours_summary" translatable="true">Select Maximum Hours</string>

    <string name="pref_limit_hours_24" translatable="false">24</string>
    <string name="pref_limit_hours_72" translatable="false">72</string>
    <string name="pref_limit_hours_7days" translatable="false">168</string>

    <string name="pref_limit_hours_label_24">1 Day</string>
    <string name="pref_limit_hours_label_72">3 Days</string>
    <string name="pref_limit_hours_label_7days">7 Days</string>

    <!--Preference Show Hours-->

    <string name="pref_show_hours_key" translatable="false">Show Hours</string>
    <string name="pref_show_hours_label" translatable="true">그래프에 최초에 보여지는 데이터시간</string>
    <string name="pref_show_hours_summary" translatable="true">Select Init Hours</string>

    <string name="pref_show_hours_3" translatable="false">3</string>
    <string name="pref_show_hours_6" translatable="false">6</string>
    <string name="pref_show_hours_12" translatable="false">12</string>
    <string name="pref_show_hours_24" translatable="false">24</string>
    <string name="pref_show_hours_72" translatable="false">72</string>

    <string name="pref_show_hours_label_3">3 Hours</string>
    <string name="pref_show_hours_label_6">6 Hours</string>
    <string name="pref_show_hours_label_12">12 Hours</string>
    <string name="pref_show_hours_label_24">1 Day</string>
    <string name="pref_show_hours_label_72">3 Days</string>

    <!--Preference Data Interval-->

    <string name="pref_data_interval_key">data_interval</string>
    <string name="pref_data_interval_summary">Select Data interval</string>
    <string name="pref_data_interval_title">그래프에 보여지는 최소단위</string>

    <string name="pref_data_interval_one" translatable="false">1</string>
    <string name="pref_data_interval_five" translatable="false">5</string>

    <string name="pref_data_interval_label_one">1 min</string>
    <string name="pref_data_interval_label_five">5 min</string>


    <!--Preference Data Format-->


    <string name="pref_data_format_key">data_format</string>
    <string name="pref_data_format_summary">Select Data Format</string>
    <string name="pref_data_format_title">그래프에 보여지는 단위</string>
    <string name="pref_data_format_mgdl" translatable="false">mg/dL</string>
    <string name="pref_data_format_mmol" translatable="false">mmol/L</string>


    <!--Preference User Setting-->

    <string name="pref_user_name_key" translatable="false">user_name</string>
    <string name="pref_user_name_label">Name</string>
    <string name="pref_user_name_summary">Set Name</string>
    <string name="pref_user_name_default">Samsung</string>


    <string name="pref_user_email_key" translatable="false">user_email</string>
    <string name="pref_user_email_label">E-mail</string>
    <string name="pref_user_email_summary">Set E-mail</string>
    <string name="pref_user_email_default">samsung@samsung.com</string>


    <!--Preference Doctor Setting-->

    <string name="pref_doctor_name_key" translatable="false">doctor_name</string>
    <string name="pref_doctor_name_label">Doctor Name</string>
    <string name="pref_doctor_name_summary">Set doctor name</string>
    <string name="pref_doctor_name_default">not inserted</string>


    <string name="pref_doctor_phone_key" translatable="false">doctor_phone</string>
    <string name="pref_doctor_phone_label">Doctor Phone</string>
    <string name="pref_doctor_phone_summary">Set Doctor Phone</string>
    <string name="pref_doctor_phone_default">not inserted</string>


    <!-- Strings related to Hyperglycemia Notification Enabled preference -->
    <string name="pref_enable_Hyperglycemia_notifications_key" translatable="false">enable_Hyperglycemia_notifications</string>
    <string name="pref_enable_Hyperglycemia_notifications_label">Hyperglycemia Notification</string>
    <string name="pref_enable_Hyperglycemia_notifications_true">Enabled</string>
    <string name="pref_enable_Hyperglycemia_notifications_false">Not Enabled</string>
    <string name="pref_enable_Hyperglycemia_notifications_default" translatable="false">true</string>


    <!-- Strings related to Hyperglycemia Notification Enabled preference -->
    <string name="pref_enable_Hypoglycemia_notifications_key" translatable="false">enable_Hypoglycemia_notifications</string>
    <string name="pref_enable_Hypoglycemia_notifications_label">Hypoglycemia Notification</string>
    <string name="pref_enable_Hypoglycemia_notifications_true">Enabled</string>
    <string name="pref_enable_Hypoglycemia_notifications_false">Not Enabled</string>
    <string name="pref_enable_Hypoglycemia_notifications_default" translatable="false">true</string>


    <!-- Strings related to Hyperglycemia Notification Enabled preference -->
    <string name="pref_enable_real_time_notifications_key" translatable="false">enable_RealTime_notifications</string>
    <string name="pref_enable_real_time_notifications_label">RealTime Notification</string>
    <string name="pref_enable_real_time_notifications_summary">실시간으로 혈당량을 알람 받습니다.</string>
    <string name="pref_enable_real_time_notifications_true">Enabled</string>
    <string name="pref_enable_real_time_notifications_false">Not Enabled</string>
    <string name="pref_enable_real_time_notifications_default" translatable="false">true</string>


    <string name="pref_Hyperglycemia_key" translatable="false">hyper</string>
    <string name="pref_Hyperglycemia_label">Hyperglycemia</string>
    <string name="pref_Hyperglycemia_summary">Set the Hyperglycemia</string>
    <string name="pref_Hyperglycemia_default">200</string>

    <string name="pref_Hypoglycemia_key" translatable="false">Hypoglycemia</string>
    <string name="pref_Hypoglycemia_label">Hypoglycemia</string>
    <string name="pref_Hypoglycemia_summary">Set the Hypoglycemia</string>
    <string name="pref_Hypoglycemia_default">80</string>



    <!-- Algorithm factor-->


    <string name="pref_algorithm_calibration_key" translatable="false">calibration</string>
    <string name="pref_algorithm_calibration_label">Calibration</string>
    <string name="pref_algorithm_calibration_summary">Set the Calibration Parameter</string>
    <string name="pref_algorithm_calibration_default">0</string>


    <string name="algorithm_prev_calibration_key" translatable="false">prevCalibration</string>
    <string name="algorithm_prev_calibration_label">Prev Calibration</string>
    <string name="algorithm_prev_calibration_default">0</string>


    <string name="algorithm_compare_value_key" translatable="false">compareValue</string>
    <string name="algorithm_compare_value_label">Calibration</string>
    <string name="algorithm_compare_value_default">0</string>





    <string name="action_settings" translatable="false">Settings</string>
    <string name="chart_description">Glucose Chart</string>
    <string name="upper_limit">Hyperglycemia</string>
    <string name="down_limit">Hypotension</string>


    <string name="mgdl" translatable="false">mg/dL</string>


    <!-- NFC activity-->

    <string name="title_nfc_activity">Tap the NFC device</string>


    <!-- Sessiong keys and values-->

    <string name="pref_session_exist_key" translatable="false">session</string>
    <string name="pref_session_date_key">session_date</string>
    <string name="pref_session_device_key">session_device</string>
    <string name="pref_session_battery_voltage_key">battery_voltage</string>
    <string name="pref_session_battery_percent_key">battery_percent</string>
    <string name="not_connect">Expired</string>


    <!--NAV BAR-->

    <string name="device_title">Device id : </string>
    <string name="start_title">Start Time : </string>
    <string name="remain_title">Remain Time : </string>
    <string name="battery_title">Battery : </string>

    <!-- Settings -->
    <string name="settings_background_service">Run in background</string>
    <string name="settings_iot_guide">\nBT Chat automatically sends HTTP GET
        request to specified server if there is a string like below.</string>
    <string name="settings_copyrights">\n\nFind more at http://www.hardcopyworld.com</string>

    <!-- UI, Activity, Fragment -->
    <string name="title_example">BLE Chat</string>
    <string name="title_ll_settings">Settings</string>
    <string name="ui_send">Send</string>

    <!-- Bluetooth -->
    <string name="bt_title">Bluetooth</string>
    <string name="bt_state_init">initializing</string>
    <string name="bt_state_wait">waiting.. (select a device manually)</string>
    <string name="bt_state_connect">connecting</string>
    <string name="bt_state_connected">connected</string>
    <string name="bt_state_error">error</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled.
        Set the bluetooth on at phone settings.</string>
    <string name="bt_cmd_sending_error">Transaction failed</string>
    <string name="bt_ble_not_supported">This device doesn\'t support BLE. Cannot start app.</string>

    <!-- BLEDeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect\na device</string>
    <string name="discoverable">Make\ndiscoverable</string>


</resources>
