<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_menu_bluetooth"
            android:title="@string/bluetooth_settings" />
        <item
            android:id="@+id/nav_nfc"
            android:icon="@drawable/ic_menu_nfc"
            android:title="@string/NFC_settings" />
    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_information"
                android:title="@string/information_setting" />
        </menu>
    </item>

</menu>
