<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".view.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="7">

        <TextView
            android:drawableLeft="@drawable/blood_drop"
            android:layout_gravity="center"
            android:typeface="sans"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/deep_red"
            android:id="@+id/title_text"
            android:textSize="40sp"
            android:text="@string/app_name"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_company"
            android:textColor="@color/deep_blue"
            android:textAlignment="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_developer"
            android:textColor="@color/deep_blue"
            android:textAlignment="center"/>


    </LinearLayout>


</LinearLayout>
