<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/blood_drop" />

    <TextView
        android:id="@+id/nav_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="26dip"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/status_title"
            android:layout_width="wrap_content"
            android:layout_height="20dip"
            android:layout_margin="3dip"
            />
        <TextView
            android:id="@+id/status_text"
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:layout_margin="3dip" />
    </LinearLayout>

    <View
        android:visibility="gone"
        android:id="@+id/divider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/device_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/device_title"
            android:textColor="@android:color/white"
            android:id="@+id/device_title"/>

        <TextView
            android:textAlignment="viewEnd"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/not_connect"
            android:id="@+id/device_id"/>

    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/start_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_title"
            android:textColor="@android:color/white"
            android:id="@+id/start_time_title"/>
        <TextView
            android:textAlignment="viewEnd"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text =  "@string/not_connect"
            android:id="@+id/start_time"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/remain_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remain_title"
            android:textColor="@android:color/white"
            android:id="@+id/remain_time_title"/>
        <TextView
            android:textAlignment="viewEnd"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/not_connect"
            android:id="@+id/remain_time"/>

    </LinearLayout>


</LinearLayout>
